[package]
authors = ["etke"]
categories = ["command-line-utilities"]
description = "Fast multi-platform (ELF/PE/MachO) binary checksec command line utility and library."
documentation = "https://docs.rs/checksec"
edition = "2021"
homepage = "https://crates.io/crates/checksec"
include = [
  "src/*.rs",
  "Cargo.toml",
  "README.md",
  "LICENSE",
]
keywords = ["checksec", "binary", "security"]
license = "Apache-2.0"
name = "checksec"
readme = "README.md"
repository = "https://github.com/etke/checksec.rs"
version = "0.0.9"

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations
lto = true        # Enable Link Time Optimization
opt-level = 'z'   # Optimize for size
panic = 'abort'   # Abort on panic

[dependencies]
clap = {version = "4.5.4", features = ["cargo"]}
colored = {version = "2.1.0", optional = true}
colored_json = {version = "5.0.0", optional = true}
either = "1.12.0"
glob = "0.3.1"
goblin = "0.8.2"
iced-x86 = {version = "1.21.0", optional = true}
ignore = "0.4.22"
itertools = "0.13.0"
memmap2 = "0.9.4"
rayon = "1.10.0"
scroll = "0.12.0"
scroll_derive = "0.12.0"
serde = {version = "1.0.202", features = ["derive"]}
serde_derive = "1.0.202"
serde_json = "1.0.117"
sysinfo = "0.30.12"

[target.'cfg(target_os="windows")'.dependencies]
windows = {version = "0.42.0", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Kernel",
  "Win32_System_Memory",
  "Win32_System_Threading",
]}

[target.'cfg(target_os="linux")'.dependencies]
xattr = {version = "1.3.1", optional = true}

[lib]
name = "checksec"
path = "src/lib.rs"

[[bin]]
name = "checksec"
path = "src/main.rs"

[features]
color = ["colored", "colored_json", "xattr"]
default = ["elf", "macho", "pe", "color", "maps", "disassembly"]
disassembly = ["iced-x86"]
elf = ["shared"]
macho = ["shared"]
maps = []
pe = []
shared = []
